--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          pip install victor-ai
+          # Install main victor framework from git to get latest coordinators
+          pip install git+https://github.com/vjsingh1984/victor.git@main#egg=victor-ai
       
       - name: Run tests
         run: |
