--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          # Install main victor framework from git to get latest coordinators
-          pip install git+https://github.com/vjsingh1984/victor.git@main#egg=victor-ai
+          # Clone and install main victor framework from git to get latest coordinators
+          git clone https://github.com/vjsingh1984/victor.git /tmp/victor-framework
+          pip install -e /tmp/victor-framework
       
       - name: Run tests
         run: |
